[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/battle/ui/MainMenuUI.gd" type="Script" id=1]
[ext_resource path="res://themes/guiTheme.tres" type="Theme" id=2]
[ext_resource path="res://ui/characterSelect/CharacterSelectUI.tscn" type="PackedScene" id=3]

[node name="MainMenuUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
visible = false
self_modulate = Color( 0.258824, 0.227451, 0.227451, 0.545098 )
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="DeathUI" type="Control" parent="."]
unique_name_in_owner = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -600.0
margin_top = -384.0
margin_right = 600.0
margin_bottom = 384.0

[node name="Panel" type="Panel" parent="DeathUI"]
self_modulate = Color( 0.262745, 0.207843, 0.207843, 0.47451 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="DeathUI/Panel"]
anchor_left = 0.393
anchor_top = 0.436
anchor_right = 0.82
anchor_bottom = 0.693
margin_left = -111.6
margin_top = -184.848
margin_right = -368.0
margin_bottom = -283.224
rect_scale = Vector2( 2, 2 )
theme = ExtResource( 2 )
text = "YOU DIED!"
align = 1
valign = 1

[node name="MenuUI" type="PanelContainer" parent="."]
unique_name_in_owner = true
self_modulate = Color( 1, 0.839216, 0.729412, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -70.0
margin_right = 150.0
margin_bottom = 70.0

[node name="VBoxContainer" type="VBoxContainer" parent="MenuUI"]
margin_left = 7.0
margin_top = 7.0
margin_right = 293.0
margin_bottom = 133.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PanelContainer" type="PanelContainer" parent="MenuUI/VBoxContainer"]
self_modulate = Color( 0.619608, 0.509804, 0.509804, 1 )
margin_right = 286.0
margin_bottom = 28.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MenuUI/VBoxContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 279.0
margin_bottom = 21.0
text = "Dungeons of ZEKONIA"
align = 1
valign = 1
uppercase = true

[node name="NewGameButton" type="Button" parent="MenuUI/VBoxContainer"]
unique_name_in_owner = true
self_modulate = Color( 0.415686, 0.92549, 0.568627, 1 )
margin_top = 32.0
margin_right = 286.0
margin_bottom = 52.0
text = "New Game"

[node name="SaveGameButton" type="Button" parent="MenuUI/VBoxContainer"]
unique_name_in_owner = true
self_modulate = Color( 0.839216, 0.588235, 0.439216, 1 )
margin_top = 56.0
margin_right = 286.0
margin_bottom = 76.0
disabled = true
text = "Save Game"

[node name="LoadGameButton" type="Button" parent="MenuUI/VBoxContainer"]
unique_name_in_owner = true
self_modulate = Color( 0.843137, 0.764706, 0.454902, 1 )
margin_top = 80.0
margin_right = 286.0
margin_bottom = 100.0
disabled = true
text = "Load Game"

[node name="SettingsButton" type="Button" parent="MenuUI/VBoxContainer"]
unique_name_in_owner = true
self_modulate = Color( 0.54902, 0.968627, 0.898039, 1 )
margin_top = 104.0
margin_right = 286.0
margin_bottom = 124.0
disabled = true
text = "Settings"

[node name="CharacterSelectUI" parent="." instance=ExtResource( 3 )]
visible = false
